2020-02-21  Michael Herstine  <sp1ff@pobox.com>

	This commit squashes a few bugs:
	    1. if `version' isn't mentioned in a score file, just assume it's
	       in the latest format

	    2. feed rules without tag scoping were being serializsed with a
	       needless trailing `nil'

	    3. all rules other than titles were failing to read tag-scoping
	       rules on creation

	    4. fixed a typo in the unit test names

	    5. log more detailed information when `elfeed-score-debug' is t
	       and a rule matches

2020-02-15  Michael Herstine  <sp1ff@pobox.com>

	This commit some additional, new scoring features for score file version 2:
	    1. tag-specific rules: any rule can now be made to apply only when

	       - any of one or more tags are present in the entry being scored

	       - none of one or more tags are present in the entry being scored

	    2. whole-word matching: in addition to string & regex matching, rules
	       can be matched using whole-word regex matching

2020-02-12  Michael Herstine  <sp1ff@pobox.com>

	Score file version 2.
	This commit does the following:

	    1. re-implements the scoring rules in terms of structs (instead)
	       of property lists

	    2. re-wrote the score file parsing logic to separate the file
	       I/O from the parsing of the score sexp.

	    3. bumps the score file format version to 2

	       - adds a new rule type "title-or-content"

	       - permits the version element of the sexp to be keyed either
	         string or symbol

	NB. Whenever the score file is written out, it will be in version
	2 format.

2020-01-19  Michael Herstine  <mherstin@linkedin.com>

	Add the option to display entry scores in *elfeed-search*.
	This commit:

	    1. provides a new function, `elfeed-score-print-entry', which
	       can be used as the value of `elfeed-search-print-entry-function`;
	       when this is done, the entry score will be printed in the
	       first column of the search buffer
